# Robolab

NaoLeague/: CMakeLists.txt
NaoLeague/AI-Project-Report/: report.aux  report.bbl  report.bib  report.bib~  report.blg  report.out  report.run.xml  report.tex
NaoLeague/CommonSource/: RobotConfiguration.cpp  RobotConfiguration.h
NaoLeague/FeatureDetection/FeatureExtraction/: .cproject  .project  goal_detection.cpp  hough_line_detection.h  img_processing.cpp  line_detection.h  main.cpp
NaoLeague/FeatureDetection/eclipse/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  main
NaoLeague/FeatureExtraction/: CMakeLists.txt  CMakeLists.txt~  LineExtraction.cpp  LineExtraction.cpp~  background.cpp  background.h  dis_ang_translation.cpp  dis_ang_translation.h  ellipse_detector.cpp  ellipse_detector.h  feature_extraction.cpp  feature_extraction.h  geometry_utils.cpp  geometry_utils.h  goal_detection.cpp  goal_detection.h  hough.cpp  hough.h  img_processing.cpp  img_processing.h  line_detection.cpp  line_detection.h  line_feature_detection.cpp  line_feature_detection.h  lines.cpp  lines.h  lines0ld.cpp  lines_old.cpp  main.cpp  old.cpp
NaoLeague/FeatureExtraction/project/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  main
NaoLeague/FeatureExtraction/source_code/: CMakeLists.txt  dis_ang_translation.cpp  feature_extraction.cpp  goal_detection.cpp  goal_detection.h  hough_line_detection.cpp  line_detection.cpp  line_feature_detection.cpp  main.cpp
NaoLeague/FeatureExtractionAlternate/: BackgroundRemovalAlternate.m  CrossingDetectorAlternate.cpp
NaoLeague/FeatureExtractionAlternate/Ellipse Detector/: README.txt  ellipses.txt  elsd.c  makefile
NaoLeague/FeatureExtractionAlternate/IPM-Matlab/: getInterpMap.m  getWorldImage.m  test_invPerspMapSetup.m
NaoLeague/FeatureExtractionAlternate/IPMDistanceBearingEstimator/: CMakeCache.txt  CMakeLists.txt  IPMDistanceBearingEstimator  IPMDistanceBearingEstimator.cpp  IPMDistanceBearingEstimator.cpp~  Makefile  cmake_install.cmake
NaoLeague/FeatureExtractionAlternate/Inverse Perspective Mapping/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  InversePerspectiveMapper  InversePerspectiveMapper.cpp  InversePerspectiveMapper.cpp~  Makefile  cmake_install.cmake  getInterpMap.m  getWorldImage.m  pixelsToWorld.m  test_invPerspMapSetup.m~
NaoLeague/Localization/: CMakeLists.txt  FeatureMap.cpp  FeatureMap.h  InputGenerator.cpp  InputGenerator.h  LocalizationUtils.cpp  LocalizationUtils.h  Particle.cpp  Particle.h  ParticleFilter.cpp  ParticleFilter.h  main.cpp
NaoLeague/LocationVisualizer/: CMakeLists.txt  CMakeLists.txt~  LocationVisualizer.cpp  LocationVisualizer.cpp~  LocationVisualizer.h  parameter.txt  parameter.txt~
NaoLeague/Utilities/: makeVisualDataset.cpp
NaoLeague/Vision/: CMakeLists.txt  FeatureDistance.cpp  FeatureDistance.h  FeatureDistanceProcessor.cpp  FeatureDistanceTest.cpp  visualHorizon.cpp  visualHorizon.h
NaoLeague/locationVisualizer/: LocationVisualizer.cpp  parameter.txt
